(lang dune 3.3)
(name domain-local-timeout)
(generate_opam_files true)
(source (github ocaml-multicore/domain-local-timeout))
(authors "Vesa Karvonen <vesa.a.j.k@gmail.com>")
(maintainers "Vesa Karvonen <vesa.a.j.k@gmail.com>")
(homepage "https://github.com/ocaml-multicore/domain-local-timeout")
(license "0BSD")
(package (name domain-local-timeout)
 (synopsis "A scheduler independent timeout mechanism")
 (depends
  (ocaml (>= 5.0))
  (psq (>= 0.2.1))
  (mdx (and (>= 1.10.0) :with-test))
  (domain-local-await (and (>= 0.1.0) :with-test))))
(using mdx 0.2)
