(lang dune 3.3)
(name domain-local-timeout)
(generate_opam_files true)
(source (github ocaml-multicore/domain-local-timeout))
(authors "Vesa Karvonen <vesa.a.j.k@gmail.com>")
(maintainers "Vesa Karvonen <vesa.a.j.k@gmail.com>")
(homepage "https://github.com/ocaml-multicore/domain-local-timeout")
(license "ISC")
(implicit_transitive_deps false)
(package (name domain-local-timeout)
 (synopsis "A scheduler independent timeout mechanism")
 (description "A low level mechanism intended for writing higher level libraries that need to be able to have scheduler friendly timeouts.")
 (depends
  (ocaml (>= 4.12.0))
  (psq (>= 0.2.1))
  (mtime (>= 2.0.0))
  (thread-table (>= 1.0.0))
  (mdx (and (>= 1.10.0) :with-test))
  (domain-local-await (and (>= 1.0.0) :with-test))
  (alcotest (and (>= 1.7.0) :with-test))))
(using mdx 0.2)
