(library
 (name Domain_local_timeout)
 (public_name domain-local-timeout)
 (modules domain_local_timeout thread_intf unix_intf domain)
 (libraries thread-table psq mtime mtime.clock.os))

(rule
 (enabled_if (< %{ocaml_version} 5.0.0))
 (action (copy domain_fake.ml domain.ml)))

(rule
 (enabled_if (>= %{ocaml_version} 5.0.0))
 (action (copy domain_real.ml domain.ml)))
